[FIX] web: Fix popover flickering on item hover
Steps to reproduce:
- Go to Inventory app
- Click on cog icon (Actions menu)
- Hover the different items => the dropdown menu flickers

The relative position of the overlay-item (parent of the popover) seem to
influence the positioning algorithm (from the usePosition hook). As overlays
should always have a position relative to the viewport anyway, we can set
the position to fixed to solved the issue.

closes odoo/odoo#162197

--- a/addons/web/static/src/core/overlay/overlay_container.scss
+++ b/addons/web/static/src/core/overlay/overlay_container.scss
@@ -1,4 +1,4 @@
 .o-overlay-item {
-    position: relative;
+    position: fixed;
     z-index: $zindex-modal;
 }
